<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_add_network"
        android:icon="@drawable/ic_add_24"
        android:orderInCategory="1"
        android:title="@string/menu_join_network"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_settings"
        android:orderInCategory="10"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_peers"
        android:orderInCategory="20"
        android:title="@string/menu_peers" />
    <item
        android:id="@+id/menu_item_orbit"
        android:orderInCategory="30"
        android:title="@string/menu_orbit" />
</menu>
